--- a/principal.html
+++ b/principal.html
@@ -2,26 +2,25 @@
 <html>
 <body>
 
-<h1> Olá! 👋 Bem-vindo a minha primeira página HTML 1</h1>
+<h1> Olá! 👋 Bem-vindo a minha primeira página HTML </h1>
 
-<p>Sou Alice Maria, participante do curso **Talento Tech**, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.
+<p>Sou Alice Maria, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
 
-**🛠️ O que você encontra aqui:**
-**- Atividades do curso Talento Tech:**
-Projetos e exercícios realizados durantes as aulas
-**- Explorações criativas:**
-Projetos em Python
+<p> 🛠️ O que você encontra aqui:</p>
+<p> - Atividades do curso Talento Tech:
+Projetos e exercícios realizados durantes as aulas</p>
 
-**✨ Sobre mim:**
-- 💡 Participante do curso Talento Tech em Santa Maria do Oeste, Pr.
-- 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, Pr.
 
-**📖 Minhas habilidades:**
-- Conhecimento básico em Python e Git.
-- Desenvolvimento de projetos práticos com foco em aprendizado contínuo.
+<p> ✨ Sobre mim:**
+<p> - 💡 Participante do curso Talento Tech em Santa Maria do Oeste, Pr.
+- 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, Pr.</p>
 
-  **🌱 Estou aprendendo mais sobre:**
--Desenvolvimento de atividades práticas em tecnologias.</p>
+<p> 📖 Minhas habilidades:**
+<p> - Conhecimento básico em Python e Git.
+ - Desenvolvimento de projetos práticos com foco em aprendizado contínuo.</p>
+
+<p> 🌱 Estou aprendendo mais sobre:</p>
+<p> - Desenvolvimento de atividades práticas em tecnologias.</p>
 
 </body>
 </html>
