--- a/principal.html
+++ b/principal.html
@@ -11,13 +11,13 @@
 Projetos e exercícios realizados durantes as aulas</p>
 
 
-<p> ✨ Sobre mim:**
-<p> - 💡 Participante do curso Talento Tech em Santa Maria do Oeste, Pr.
-- 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, Pr.</p>
+<p> ✨ Sobre mim:
+<p> - 💡 Participante do curso Talento Tech em Santa Maria do Oeste, Pr.</p>
+<p> - 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, Pr.</p>
 
-<p> 📖 Minhas habilidades:**
-<p> - Conhecimento básico em Python e Git.
- - Desenvolvimento de projetos práticos com foco em aprendizado contínuo.</p>
+<p> 📖 Minhas habilidades:</p>
+<p> - Conhecimento básico em Python e Git.</p>
+<p> - Desenvolvimento de projetos práticos com foco em aprendizado contínuo.</p>
 
 <p> 🌱 Estou aprendendo mais sobre:</p>
 <p> - Desenvolvimento de atividades práticas em tecnologias.</p>
