--- a/principal.html
+++ b/principal.html
@@ -2,24 +2,24 @@
 <html>
 <body>
 
-<h1> Olá! 👋 Bem-vindo a minha primeira página HTML </h1>
+<h1> Olá! 👋 Bem-vindos a minha primeira página HTML </h1>
 
 <p>Sou Alice Maria, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
 
-<p> 🛠️ O que você encontra aqui:</p>
+<h2>🛠️ O que você encontra aqui:</h2>
 <p> - Atividades do curso Talento Tech:
 Projetos e exercícios realizados durantes as aulas</p>
 
 
-<p> ✨ Sobre mim:
+<h2> ✨ Sobre mim:</h2>
 <p> - 💡 Participante do curso Talento Tech em Santa Maria do Oeste, Pr.</p>
 <p> - 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, Pr.</p>
 
-<p> 📖 Minhas habilidades:</p>
+<h2> 📖 Minhas habilidades:</h2>
 <p> - Conhecimento básico em Python e Git.</p>
 <p> - Desenvolvimento de projetos práticos com foco em aprendizado contínuo.</p>
 
-<p> 🌱 Estou aprendendo mais sobre:</p>
+<h2> 🌱 Estou aprendendo mais sobre:</h2>
 <p> - Desenvolvimento de atividades práticas em tecnologias.</p>
 
 </body>
