--- a/principal.html
+++ b/principal.html
@@ -2,6 +2,14 @@
 <html>
 <body>
 
+<title>W3.CSS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+<body>
+
+<div class="w3-container w3-flat-amethyst">
+
 <h1> Olá! 👋 Bem-vindos a minha primeira página HTML </h1>
 
 <p>Sou Alice Maria, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
@@ -21,6 +29,6 @@ Projetos e exercícios realizados durantes as aulas</p>
 
 <h2> 🌱 Estou aprendendo mais sobre:</h2>
 <p> - Desenvolvimento de atividades práticas em tecnologias.</p>
-
+</div>
 </body>
 </html>
