--- a/principal.html
+++ b/principal.html
@@ -12,7 +12,7 @@
 
 <h1> Olá! 👋 Bem-vindos a minha primeira página HTML </h1>
 
-<p>Sou Alice Maria, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
+<p>Sou a Alice, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
 
 <h2>🛠️ O que você encontra aqui:</h2>
 <p> - Atividades do curso Talento Tech:
