--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ Projetos e exercícios realizados durantes as aulas</p>
 
 <h2> 🌱 Estou aprendendo mais sobre:</h2>
 <p> - Desenvolvimento de atividades práticas em tecnologias.</p>
-<form action="teste.html">
+<form action="primeiro.html">
   <input type="submit" value="Confirmar">
 </form>
 </div>
