--- a/primeiro.html
+++ b/primeiro.html
@@ -11,7 +11,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background-color: #4CAF50; /* fundo verde */
             color: #333;
             margin: 0;
             padding: 20px;
@@ -21,7 +21,7 @@
             margin-bottom: 20px;
         }
         h1 {
-            color: #6200ea;
+            color: white; /* título branco para contrastar com o fundo verde */
         }
         .quiz-container {
             max-width: 600px;
@@ -60,7 +60,7 @@
         }
     </style>
 </head>
-<body class="w3-flat-green">
+<body>
 
     <header>
         <h1>Quiz de Tecnologia</h1>
