--- a/index.html
+++ b/index.html
@@ -1,37 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Minha Página HTML</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #8e44ad; /* Fundo amethyst */
+            color: white;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: white;
+        }
+        h2 {
+            color: #f1c40f; /* Cor dourada para subtítulos */
+        }
+        .w3-container {
+            background-color: #9b59b6; /* Cor de fundo mais suave para o conteúdo */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 16px;
+        }
+        form {
+            text-align: center;
+            margin-top: 20px;
+        }
+        input[type="submit"] {
+            background-color: #f39c12; /* Cor dourada do botão */
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #e67e22; /* Cor de hover para o botão */
+        }
+    </style>
+</head>
 <body>
 
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-<body>
+    <div class="w3-container">
+        <h1>Olá! 👋 Bem-vindos a minha primeira página HTML</h1>
 
-<div class="w3-container w3-flat-amethyst">
+        <p>Sou a Alice, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
 
-<h1> Olá! 👋 Bem-vindos a minha primeira página HTML </h1>
+        <h2>🛠️ O que você encontra aqui:</h2>
+        <p>- Atividades do curso Talento Tech: Projetos e exercícios realizados durante as aulas.</p>
 
-<p>Sou a Alice, participante do curso Talento Tech, explorando atividades práticas e projetos tecnológicos com foco no aprendizado e na criatividade.</p>
+        <h2>✨ Sobre mim:</h2>
+        <p>- 💡 Participante do curso Talento Tech em Santa Maria do Oeste, PR.</p>
+        <p>- 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, PR.</p>
 
-<h2>🛠️ O que você encontra aqui:</h2>
-<p> - Atividades do curso Talento Tech:
-Projetos e exercícios realizados durantes as aulas</p>
+        <h2>📖 Minhas habilidades:</h2>
+        <p>- Conhecimento básico em Python e Git.</p>
+        <p>- Desenvolvimento de projetos práticos com foco em aprendizado contínuo.</p>
 
+        <h2>🌱 Estou aprendendo mais sobre:</h2>
+        <p>- Desenvolvimento de atividades práticas em tecnologias.</p>
 
-<h2> ✨ Sobre mim:</h2>
-<p> - 💡 Participante do curso Talento Tech em Santa Maria do Oeste, Pr.</p>
-<p> - 🎓 Acadêmica de Pedagogia na UNICENTRO, Guarapuava, Pr.</p>
+        <form action="primeiro.html">
+            <input type="submit" value="Confirmar">
+        </form>
+    </div>
 
-<h2> 📖 Minhas habilidades:</h2>
-<p> - Conhecimento básico em Python e Git.</p>
-<p> - Desenvolvimento de projetos práticos com foco em aprendizado contínuo.</p>
-
-<h2> 🌱 Estou aprendendo mais sobre:</h2>
-<p> - Desenvolvimento de atividades práticas em tecnologias.</p>
-<form action="primeiro.html">
-  <input type="submit" value="Confirmar">
-</form>
-</div>
 </body>
 </html>
